수정사항 작업 중

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <ul>
             <li>
               <a href="#newnal_introduce_anchor">
-                <p>Newnal AI Agent Phone</p>
-                <p>Newnal AI Agent Phone</p>
+                <p>Web3 ai Phone</p>
+                <p>Web3 ai Phone</p>
               </a>
             </li>
             <li>
@@ -82,10 +82,10 @@
       <section id="key_visual" data-aos="">
         <div class="sticky_box">
           <div class="visual_device cover">
-            <video src="src/images/main_intro.mp4" autoplay playsinline muted id="main_intro" class="cover"></video>
-            <video src="src/images/main_visual.mp4" autoplay playsinline muted loop id="main_visual"
-              class="cover"></video>
+            <video src="src/images/main_intro.mp4" id="main_intro" autoplay playsinline muted preload="none" class="cover"></video>
+            <video src="src/images/main_visual.mp4" id="main_visual" autoplay playsinline muted loop preload="none" class="cover"></video>
             <div class="main_txt layout_inner" data-aos="fade-up">
+              <h1 class="web3_ai">Web3 ai</h1>
               <h1 class="type_ci">NEWNAL</h1>
               <h1 class="taR">another <span>-</span> i</h1>
               <h1><i>another</i> <i>era</i></h1>
@@ -116,7 +116,7 @@
             </video>
           </div>
           <div class="txt_box" data-aos="fade-up">
-            <h2>Newnal <span class="ci_s">AI Agent Phone</span></h2>
+            <h2>Newnal <span class="ci_s">Web3 ai Phone</span></h2>
             <p>This is not just another AI. <br>This is another YOU.</p>
           </div>
         </div>
@@ -129,8 +129,8 @@
             You’ve met AI inside a <br>
             phone, but never one that <br>
             thinks like you. <br class="both">
-            <strong>This is the first AI Agent <br>
-              Phone </strong> designed to grow, <br>
+            <strong>This is the first Web3 ai <br>
+            Phone </strong> designed to grow, <br>
             adapt, and respond with <br>
             deep personal context.
           </div>
@@ -240,7 +240,7 @@
                 <div class="layout_inner">
                   <div class="tit_box col2_box">
                     <span></span>
-                    <p>AI Agent</p>
+                    <p>Web3 ai Agent</p>
                   </div>
                   <div class="info_box col2_box">
                     <div class="img_box">
@@ -251,7 +251,7 @@
                         <strong>“Can you...?” Already done. </strong>
                       </p>
                       <p>
-                        <strong>Newnal’s AI Agent learns your routines, behaviors, tone, and preferences. </strong>
+                        <strong>Newnal’s Web3 ai Agent learns your routines, behaviors, tone, and preferences.</strong>
                       </p>
                       <p>
                         Book that cab. Fill out that insurance
@@ -309,7 +309,7 @@
           <div class="col2_box">
             <p class="sub_tit" data-aos="fade-up">Created for Everyone. <br class="mo">Crafted for You.</p>
             <p class="info" data-aos="fade-up" data-aos-delay="100">
-              The Newnal AI Agent Phone wasn’t built to impress with numbers, <br>
+              The Newnal Web3 ai Phone wasn’t built to impress with numbers, <br>
               but to make an impact. We believe everyone should be able to <br>
               access and enjoy this experience — not just some. <br>
               With the right balance of performance and purpose, <br>
@@ -442,8 +442,7 @@
             <h2 data-aos="fade-up">From Vision <br><span class="ci_s">to Reality</span></h2>
             <div class="info" data-aos="fade-up" data-aos-delay="100">
               <p>This is where it all began. <br>It’s the first moment our vision began to move.</p>
-              <p>And now, the Newnal AI Agent Phone goes beyond what we imagined, <br>turning possibility into an
-                experience like nothing before.</p>
+              <p>And now, The Newnal Web3 ai Phone goes beyond what we imagined, <br>turning possibility into an experience like nothing before.</p>
               <p>The world we once dreamed of? <br class="mo">It’s about to become real — in your life.</p>
             </div>
           </div>
@@ -618,9 +617,7 @@
             <h2 data-aos="fade-up">Stay tuned. <br>
               <strong class="ci_s">The next change begins again.</strong>
             </h2>
-            <p data-aos="fade-up">The journey with the Newnal AI Agent Phone is just beginning. This first step leads to
-              something truly big. <br>We're moving forward deliberately to ensure everyone can experience their own
-              Newnal AI Agent Phone.</p>
+            <p data-aos="fade-up">The journey with The Newnal Web3 ai Phone is just beginning. This first step leads to something truly big. <br>We're moving forward deliberately to ensure everyone can experience their own Newnal Web3 ai Phone.</p>
           </div>
           <div class="to_be_launched_cont m_swiper swiper">
             <ul class="swiper-wrapper">
@@ -643,10 +640,7 @@
                 </div>
                 <div class="txt_box">
                   <p class="tit">Newnal for <br>Lagacy User</p>
-                  <p class="info">An intuitive AI phone for those easing into the digital world. With a more powerful
-                    built-in AI Agent, it simplifies everyday life — handling tasks, offering guidance, and staying one
-                    step
-                    ahead. Designed for clarity, ease, and trust,
+                  <p class="info">An intuitive AI phone for those easing into the digital world. With a more powerful built-in Web3 ai Agent, it simplifies everyday life — handling tasks, offering guidance, and staying one step ahead. Designed for clarity, ease, and trust,
                     it’s your gentle guide in a connected world.</p>
                 </div>
               </li>
@@ -747,6 +741,7 @@
                   <span class="pointer"></span>
                   <ul>
                     <li>2013</li>
+                    <li>2015</li>
                     <li>2017</li>
                     <li>2018</li>
                     <li>2019</li>
@@ -764,7 +759,15 @@
                       <ul>
                         <li>
                           <span>Vision Sparked <br>in Silicon Valley</span>
-                          <p>Launched in Silicon Valley with <br>Shawn Fanning, creator of Napster.</p>
+                          <p>Launched the first blockchain <br>startup in Silicon Valley.</p>
+                        </li>
+                      </ul>
+
+                      <!-- 2015 -->
+                      <ul>
+                        <li>
+                          <span>Pioneered a Hybrid On/ <br>Off-Chain System</span>
+                          <p>Developed a high-performance, <br>secure, and fully transparent <br>platform for asset token sharing.</p>
                         </li>
                       </ul>
 
@@ -787,8 +790,8 @@
                       <!-- 2019 -->
                       <ul>
                         <li>
-                          <span>Yosemite <br>Card Launch</span>
-                          <p>Released the world’s first <br>blockchain-based credit card.</p>
+                          <span>Rolled Out a Stablecoin <br>Payment Platform</span>
+                          <p>Built a stable token framework on Infra Blockchain, offering predictable and low transaction costs.</p>
                         </li>
                       </ul>
 
@@ -808,22 +811,19 @@
                           <p>Raised KRW 36B from <br>major institutional investors.</p>
                         </li>
                         <li>
-                          <span>BLOCKCHAT Launch</span>
-                          <p>Official launch of BLOCKCHAT <br>on Google Play & App Store.</p>
+                          <span>Unveiled Web3 <br>Telecom Infrastructure</span>
+                          <p>Released the world’s first blockchain-based <br>messaging service on Web3 telecom
+                            infrastructure.</p>
                         </li>
                       </ul>
 
                       <!-- 2024 -->
                       <ul>
                         <li>
-                          <span>BCL Meditech Inc. Founded</span>
-                          <p>Established BCL Meditech Inc. in Korea <br>
-                            as a hardware-focused subsidiary <br>
-                            dedicated to AI device development. </p>
-                        </li>
-                        <li>
-                          <span>Series A Investment Closed</span>
-                          <p>A cumulative investment of KRW 36 billion, <br>securing long-term growth momentum.</p>
+                          <span>Launched Newnal<br> - the First Web3 AI <br>Operating System</span>
+                          <p>Introduced a blockchain-native <br>
+                            AI agent and operating system, <br>
+                            marking the beginning of the Web3 AI era.</p>
                         </li>
                       </ul>
 
@@ -839,7 +839,6 @@
                             <strong>Second half</strong>
                             Announced global roadmap and <br>
                             its device pre-orders in San Francisco, U.S.
-
                             <strong>Oct</strong>
                             Officially launched the Web3 AI Newnal Device
                           </p>
@@ -1109,6 +1108,29 @@
   <script src="src/js/lenis.js"></script>
   <script src="src/js/common.js"></script>
   <script src="src/js/main.js"></script>
+  <script src="src/js/CSSRulePlugin.min.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const videos = document.querySelectorAll("video");
+
+      videos.forEach(video => {
+        // 속성 강제 추가
+        video.setAttribute("muted", "");
+        video.setAttribute("playsinline", "");
+        video.setAttribute("autoplay", "");
+
+        // JS에서도 명시적으로 설정
+        video.muted = true;
+        video.playsInline = true;
+
+        // 자동재생 시도
+        video.play().catch(err => {
+          console.warn("Autoplay failed:", err);
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
