텍스트 수정정

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                       <ul>
                         <li>
                           <span>Series A Funding</span>
-                          <p>Raised KRW 36B from <br>major institutional investors.</p>
+                          <p>Raised $30M from <br>major institutional investors.</p>
                         </li>
                         <li>
                           <span>Unveiled Web3 <br>Telecom Infrastructure</span>
